--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>com.miexist.simple</groupId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${httpapi.version}</version>
 	<artifactId>httpapi-parent</artifactId>
 	<name>Simple Http Client Api</name>
 	<packaging>pom</packaging>
 	<properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<httpapi.version>1.0</httpapi.version>
+	</properties>
 	<modules>
 		<module>httpapi</module>
-    <module>httpapi-httpclient</module>
-    <module>httpapi-okhttp</module>
-    <module>httpapi-jdk</module>
-  </modules>
+		<module>httpapi-httpclient</module>
+		<module>httpapi-okhttp</module>
+		<module>httpapi-jdk</module>
+	</modules>
 </project>
