--- a/1.plist
+++ b/1.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>rebot.ipa</string>
+				<string>启元机器人app</string>
 			</dict>
 		</dict>
 	</array>
