--- a/1.plist
+++ b/1.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.miexists.robot</string>
+				<string>cn.gentlesoft.cloud.robot</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
