--- a/httpapi-httpclient/pom.xml
+++ b/httpapi-httpclient/pom.xml
@@ -22,14 +22,14 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.3.2</version>
-		</dependency>
-		<dependency>
 			<groupId>com.miexist.simple</groupId>
 			<artifactId>httpapi</artifactId>
 			<version>${httpapi.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpmime</artifactId>
+			<version>4.5.3</version>
 		</dependency>
 	</dependencies>
 </project>
